mod: added dynamic divs for local search and dummy data

--- a/index.html
+++ b/index.html
@@ -241,106 +241,7 @@
             </div>
         </div>
 
-        <section>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-4 card electrician-1" data-trade="electrician">
-                        <h2 id="business_heading">Electrician St Albans</h2>
-                        <div class="business_icon"><i class="fas fa-bolt"></i></div>
-                        <div id="electrician-info-1">
-
-                            <table class="elec-tb1">
-                                <tr>
-                                    <td class="attrib-col1">
-                                        <h6>Address:</h6>
-                                    </td>
-                                    <td class="attrib-col2">
-                                        <h6 id="elec1-add"></h6>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="attrib-col1">
-                                        <h6>Number:</h6>
-                                    </td>
-                                    <td class="attrib-col2">
-                                        <h6 id="elec1-num"></h6>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="attrib-col1">
-                                        <h6>Email:</h6>
-                                    </td>
-                                    <td class="attrib-col2">
-                                        <h6 id="elec1-email"></h6>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="attrib-col1">
-                                        <h6>Website:</h6>
-                                    </td>
-                                    <td class="attrib-col2">
-                                        <h6 id="elec1-url"></h6>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="attrib-col1">
-                                        <h6>Social:</h6>
-                                    </td>
-                                    <td class="attrib-col2">
-                                        <h6 id="elec1-social"></h6>
-                                    </td>
-                                </tr>
-                            </table>
-
-                        </div>
-                        <button id="more-button-1" class="btn btn-outline-dark hvr-sweep-to-bottom">More Info...</button>
-                        <button id="less-button-1" class="btn btn-outline-dark hvr-sweep-to-bottom">Less Info...</button>
-                    </div>
-
-                    <div class="col-lg-4 card plumber-1" data-trade="plumber">
-                        <h2 id="business_heading">Plumber St Albans</h2>
-                        <div class="business_icon"><i class="fas fa-wrench"></i></div>
-                        <p id="plumber-info-1">Business Info Here</p>
-                        <button id="more-button-2" class="btn btn-outline-dark hvr-sweep-to-bottom">More Info...</button>
-                        <button id="less-button-2" class="btn btn-outline-dark hvr-sweep-to-bottom">Less Info...</button>
-                    </div>
-
-                    <div class="col-lg-4 card carpenter-1" data-trade="carpenter">
-                        <h2 id="business_heading">Carpenter St Albans</h2>
-                        <div class="business_icon"><i class="fas fa-screwdriver"></i></div>
-                        <p id="carpenter-info-1">Business Info Here</p>
-                        <button id="more-button-3" class="btn btn-outline-dark hvr-sweep-to-bottom">More Info...</button>
-                        <button id="less-button-3" class="btn btn-outline-dark hvr-sweep-to-bottom">Less Info...</button>
-                    </div>
-
-                    <div class="col-lg-4 card mechanic-1" data-trade="mechanic">
-                        <h2 id="business_heading">Mechanic St Albans</h2>
-                        <div class="business_icon"><i class="fas fa-car-battery"></i></div>
-                        <p id="mechanic-info-1">Business Info Here</p>
-                        <button id="more-button-4" class="btn btn-outline-dark hvr-sweep-to-bottom">More Info...</button>
-                        <button id="less-button-4" class="btn btn-outline-dark hvr-sweep-to-bottom">Less Info...</button>
-                    </div>
-
-                    <div class="col-lg-4 card plasterer-1" data-trade="plasterer">
-                        <h2 id="business_heading">Plasterer St Albans</h2>
-                        <div class="business_icon"><i class="fas fa-toolbox"></i></div>
-                        <p id="plasterer-info-1">Business Info Here</p>
-                        <button id="more-button-5" class="btn btn-outline-dark hvr-sweep-to-bottom">More Info...</button>
-                        <button id="less-button-5" class="btn btn-outline-dark hvr-sweep-to-bottom">Less Info...</button>
-                    </div>
-
-                    <div class="col-lg-4 card decorator-1" data-trade="decorator">
-                        <h2 id="business_heading">Decorator St Albans</h2>
-                        <div class="business_icon"><i class="fas fa-paint-roller"></i></div>
-                        <p id="decorator-info-1">Business Info Here</p>
-                        <button id="more-button-6" class="btn btn-outline-dark hvr-sweep-to-bottom">More Info...</button>
-                        <button id="less-button-6" class="btn btn-outline-dark hvr-sweep-to-bottom">Less Info...</button>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
+        <div class="row dynamic-business-divs"></div>
 
     </main>
 
