mod: local page styled and responsive, fix: dynamic div setup

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <main class="local-search">
         <div class="row no-gutters">
             <div class="col-12 col-lg-12 notice-banner">
-                <h5 class="notice-message">Important Notice: Limited Search And Dummy Data Avaliable</h5>
+                <h5 class="notice-message">Important Notice: Limited Search Availability And Dummy Data Provided</h5>
             </div>
         </div>
 
@@ -207,7 +207,7 @@
                 <div class="col-12 col-lg-8 choose-trade-local">
                     <h3>select a trade</h3>
                     <div class="row">
-                        <div class="col-12 col-lg-4 left-options-local">
+                        <div class="col-12 col-md-4 col-lg-4 left-options-local">
                             <input type="checkbox" id="electrician-local" name="tradesperson" value="electrician">
                             <label for="electrician-local">electrician</label><br>
 
@@ -215,7 +215,7 @@
                             <label for="plumber-local">plumber</label><br>
                         </div>
 
-                        <div class="col-12 col-lg-4 middle-options-local">
+                        <div class="col-12 col-md-4 col-lg-4 middle-options-local">
                             <input type="checkbox" id="carpenter-local" name="tradesperson" value="carpenter">
                             <label for="carpenter-local">Carpenter</label><br>
 
@@ -223,7 +223,7 @@
                             <label for="mechanic-local">Mechanic</label><br>
                         </div>
 
-                        <div class="col-12 col-lg-4 right-options-local">
+                        <div class="col-12 col-md-4 col-lg-4 right-options-local">
                             <input type="checkbox" id="plasterer-local" name="tradesperson" value="plasterer">
                             <label for="plasterer-local">Plasterer</label><br>
 
@@ -286,7 +286,7 @@
     <!--This line of code below is for the back to top button. when a user scrolls down if will appear in the bottom right just above the footer. I achieved this by a mix of html, css and javascript-->
 
     <!--Back to top button-->
-    <a id="to-top-btn" class="hvr-sweep-to-bottom hvr-pulse"><i class="fas fa-angle-double-up" aria-hidden="true"></i></a>
+    <a id="to-top-btn" class="hvr-sweep-to-bottom"><i class="fas fa-angle-double-up" aria-hidden="true"></i></a>
 
     <!--Here I have created a modal contact form using bootstraps modal. I have used the code and then modified it to what i needed it to be and that is a two seperate contact forms. The first form is for general questions and the second form is for adding a business for my local search page. Both forms are linked to the EmailJS API but because i am using the free servie they are sharing the same email template.-->
 
