--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
 
                 <!--Modal Header-->
                 <div class="modal-header">
-                    <h4 class="modal-title">Contact Me</h4>
+                    <h4 class="modal-title col-11">Contact Me</h4>
 
                     <!--Close Contact Modal Button-->
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close col-1" data-dismiss="modal">&times;</button>
                 </div>
 
                 <!--Modal Subject Header-->
