fix: footer position fixed for local page

--- a/index.html
+++ b/index.html
@@ -208,26 +208,26 @@
                     <h3>select a trade</h3>
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-4 left-options-local">
-                            <input type="checkbox" id="electrician-local" name="tradesperson" value="electrician">
+                            <input type="checkbox" id="electrician-local" name="tradesperson-local" value="electrician-local">
                             <label for="electrician-local">electrician</label><br>
 
-                            <input type="checkbox" id="plumber-local" name="tradesperson" value="plumber">
+                            <input type="checkbox" id="plumber-local" name="tradesperson-local" value="plumber-local">
                             <label for="plumber-local">plumber</label><br>
                         </div>
 
                         <div class="col-12 col-md-4 col-lg-4 middle-options-local">
-                            <input type="checkbox" id="carpenter-local" name="tradesperson" value="carpenter">
+                            <input type="checkbox" id="carpenter-local" name="tradesperson-local" value="carpenter-local">
                             <label for="carpenter-local">Carpenter</label><br>
 
-                            <input type="checkbox" id="mechanic-local" name="tradesperson" value="car_repair">
+                            <input type="checkbox" id="mechanic-local" name="tradesperson-local" value="car_repair-local">
                             <label for="mechanic-local">Mechanic</label><br>
                         </div>
 
                         <div class="col-12 col-md-4 col-lg-4 right-options-local">
-                            <input type="checkbox" id="plasterer-local" name="tradesperson" value="plasterer">
+                            <input type="checkbox" id="plasterer-local" name="tradesperson-local" value="plasterer-local">
                             <label for="plasterer-local">Plasterer</label><br>
 
-                            <input type="checkbox" id="decorator-local" name="tradesperson" value="decorator">
+                            <input type="checkbox" id="decorator-local" name="tradesperson-local" value="decorator-local">
                             <label for="decorator-local">Decorator</label><br>
                         </div>
                     </div>
